--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Página principal</title>
 </head>
 <body>
-    <h1>Curso Python</h1>
+    <h1>Página web de Github de zkitkatwise</h1>
 </body>
 </html>
